--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
             <div class="socials">
-                <a href="#"><i class="ri-youtube-line"></i></a>
+                <a href="#"><i class="ri-facebook-line"></i></a>
                 <a href="#"><i class="ri-instagram-line"></i></a>
                 <a href="#"><i class="ri-twitter-line"></i></a>
             </div>
